--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<section class="container">
+    <div class="login">
+        <h1>Login</h1>
+        <form ng-submit="submit()" novalidate>
+            <p><input type="text" ng-model="username" placeholder="Username"></p>
+            <p><input type="password" ng-model="password" placeholder="Password"></p>
+            <p class="submit"><input type="submit"></p>
+        </form>
+    </div>
+</section>
